处理llm响应异常情况